--- a/index.xhtml
+++ b/index.xhtml
@@ -41,6 +41,134 @@
             </table>
         </td>
     </tr>
+
+    <tr>
+        <td align="center" valign="top">
+            <table id="calltoaction" style="border-left: 2px solid #e6e6e6; border-right: 2px solid #e6e6e6;" cellpadding="0" cellspacing="0" width="600">
+                <tbody>
+                    <tr>
+                        <td style="background-color:#ffffff;border-top: 0 solid #ffffff; text-align: center; height: 50px;" align="center">
+
+                            <table id="calltoaction-content" cellspacing="0" cellpadding="0" width="600">
+                                <tbody>
+                                <tr>
+                                    <td width="100">
+                                        <table width="600" style="height: 60px;">
+                                            <tbody>
+                                            <tr>
+                                                <td width="100%" style="background: #9cc135 url('http://www.clker.com/cliparts/2/d/6/6/12586618121108987169calgarc_Sticker_SVG(inkscape).svg.med.png') no-repeat; background-size: auto 90%; background-position: 5px 5px; text-align: left; padding-left: 80px;">
+
+                                                Meet the maker of Lorem Ipsum today. Click here!
+
+                                                </td>
+                                            </tr>
+                                            </tbody>
+                                        </table>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </td>
+    </tr>
+
+    <tr>
+        <td align="center" valign="top">
+            <table id="body" style="border-left: 2px solid #e6e6e6; border-right: 2px solid #e6e6e6;" cellpadding="0" cellspacing="0" width="600">
+                <tbody>
+                    <tr>
+                        <td style="background-color:#ffffff;border-top: 0 solid #ffffff; height: 50px;" align="center">
+
+                            <table id="body-content" cellspacing="0" cellpadding="0" width="600">
+                                <tbody>
+                                <tr>
+                                    <td width="100">
+                                        <table width="600" style="height: 100px;">
+                                            <tbody>
+                                            <tr>
+                                                <td width="70%" valign="top" style="padding:10px;">
+
+                                                    <h1>Newsletter Title</h1>
+                                                    <p>
+                                                        "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+                                                    </p>
+                                                    <hr style="border: none; border-top: 1px dotted #ccc; margin: 30px 0;" />
+                                                    <h1>Newsletter Title</h1>
+                                                    <p>
+                                                        "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+                                                    </p>
+                                                </td>
+                                                <td width="30%" valign="top" style="padding:15px 10px 10px 10px;">
+
+                                                    <h2>Aside Title</h2>
+                                                    <p>Want to read more about Lorem Ipsum? Folow these links below.</p>
+                                                    <table id="links">
+                                                        <tbody>
+                                                            <td>
+                                                                <tr style="padding:5px;">
+                                                                <a href="#" style="font-weight: bold; color:#9cc135; text-decoration: none;">Links One</a>
+                                                                </tr>
+                                                                <tr>
+                                                                <a href="#" style="font-weight: bold; color:#9cc135; text-decoration: none;">Links Two</a>
+                                                                </tr>
+                                                                <tr>
+                                                                <a href="#" style="font-weight: bold; color:#9cc135; text-decoration: none;">Links Three</a>
+                                                                </tr>
+                                                                <tr>
+                                                                <a href="#" style="font-weight: bold; color:#9cc135; text-decoration: none;">Links Four</a>
+                                                                </tr>
+                                                            </td>
+                                                        </tbody>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                            </tbody>
+                                        </table>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </td>
+    </tr>
+
+    <tr>
+        <td align="center" valign="top">
+            <table id="footer" style="border-left: 2px solid #e6e6e6; border-right: 2px solid #e6e6e6;" cellpadding="0" cellspacing="0" width="600">
+                <tbody>
+                    <tr>
+                        <td style="background-color:#ffffff;border-top: 0 solid #ffffff; text-align: center; height: 50px;" align="center">
+
+                            <table id="footer-content" cellspacing="0" cellpadding="0" width="600">
+                                <tbody>
+                                <tr>
+                                    <td width="100">
+                                        <table width="600" style="height: 100px;">
+                                            <tbody>
+                                            <tr>
+                                                <td width="100%" style="background:#453535; color: #fff; font-size: 10px;">Footer Area</td>
+                                            </tr>
+                                            </tbody>
+                                        </table>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </td>
+    </tr>
     </tbody>
 </table>
 
