The newsletter file in XHTML

--- a/index.xhtml
+++ b/index.xhtml
@@ -26,7 +26,7 @@
                                         <table width="600" style="height: 100px;">
                                             <tbody>
                                             <tr>
-                                                <td width="100%" style="background:url('img/logo.png') no-repeat; background-size: auto 90%; background-position: 5px 5px; ">The Newsletter for Jacob Ekanem</td>
+                                                <td width="100%" style="background:url('http://s23.postimg.org/l33zdpse3/logo.png') no-repeat; background-size: auto 90%; background-position: 5px 5px; ">The Newsletter for Jacob Ekanem</td>
                                             </tr>
                                             </tbody>
                                         </table>
